--- a/.github/workflows/001.yml
+++ b/.github/workflows/001.yml
@@ -29,6 +29,12 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
@@ -36,7 +42,7 @@ jobs:
           echo test, and deploy your project.
           pwd
           ls
-          pip install jupyter-book
+          #pip install jupyter-book
           python --version
           #jupyter-book build docs
           #pip install ghp-import
