--- a/.github/workflows/001.yml
+++ b/.github/workflows/001.yml
@@ -31,9 +31,9 @@ jobs:
 
       # Install dependencies
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-
+          run: |
+          #pip install -r requirements.txt
+          pwd
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
