--- a/.github/workflows/001.yml
+++ b/.github/workflows/001.yml
@@ -29,6 +29,13 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
+      # Python checkout
+      - name: Helen 1
+        run: |
+          python -m pip install --upgrade pip	
+          pip install flake8 pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
