--- a/.github/workflows/001.yml
+++ b/.github/workflows/001.yml
@@ -43,8 +43,7 @@ jobs:
           echo test, and deploy your project.
           pwd
           ls
-          #pip install jupyter-book
           python --version
-          #jupyter-book build docs
+          jupyter-book build docs
           #pip install ghp-import
           #ghp-import -n -p docs/_build/html
