--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp                            3.7.4.post0
+aiohttp                            3.7.4
 alabaster                          0.7.12
 anaconda-client                    1.7.2
 anaconda-navigator                 2.0.3
@@ -25,7 +25,7 @@ backcall                           0.2.0
 backports.functools-lru-cache      1.6.4
 backports.shutil-get-terminal-size 1.0.0
 backports.tempfile                 1.0
-backports.weakref                  1.0.post1
+backports.weakref                  1.0.
 beautifulsoup4                     4.9.3
 binaryornot                        0.4.4
 bitarray                           2.1.0
@@ -43,15 +43,7 @@ click                              7.1.2
 cloudpickle                        1.6.0
 clyent                             1.2.2
 colorama                           0.4.4
-conda                              4.10.1
-conda-build                        3.21.4
-conda-content-trust                0+unknown
-conda-pack                         0.6.0
-conda-package-handling             1.7.3
-conda-repo-cli                     1.0.4
-conda-token                        0.3.0
-conda-verify                       3.4.2
-contextlib2                        0.6.0.post1
+contextlib2                        0.6.0
 cookiecutter                       1.7.2
 coverage                           5.5
 cryptography                       3.4.7
@@ -208,7 +200,6 @@ Pygments                           2.9.0
 pylint                             2.8.3
 pyls-black                         0.4.6
 pyls-spyder                        0.3.2
-pyodbc                             4.0.0-unsupported
 pyOpenSSL                          20.0.1
 pyparsing                          2.4.7
 pyproj                             3.1.0
@@ -241,7 +232,7 @@ scikit-learn                       0.24.2
 scipy                              1.6.2
 seaborn                            0.11.1
 Send2Trash                         1.5.0
-setuptools                         52.0.0.post20210125
+setuptools                         52.0.0
 simplegeneric                      0.8.1
 singledispatch                     0.0.0
 six                                1.16.0
