--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
-cloudpickle==1.6.0
+cloudpickle
 clyent==1.2.2
 colorama==0.4.4
 contextlib2==0.6.0.post1
