--- a/requirements.txt
+++ b/requirements.txt
@@ -124,8 +124,8 @@ mccabe==0.6.1
 mdit-py-plugins==0.2.6
 mistune==0.8.4
 mkl-fft==1.3.0
-mkl-random==1.2.1
-mkl-service==2.3.0
+mkl-random
+mkl-service
 mock==4.0.3
 more-itertools==8.8.0
 mpmath==1.2.1
