--- a/requirements.txt
+++ b/requirements.txt
@@ -227,7 +227,7 @@ seaborn==0.11.1
 Send2Trash==1.5.0
 setuptools==52.0.0
 simplegeneric==0.8.1
-singledispatch==0.0.0
+singledispatch
 six==1.16.0
 smmap==4.0.0
 sniffio==1.2.0
