--- a/requirements.txt
+++ b/requirements.txt
@@ -294,7 +294,7 @@ wrapt==1.12.1
 wurlitzer==2.1.0
 xlrd==2.0.1
 XlsxWriter==1.3.8
-xlwings==0.23.0
+xlwings
 xlwt==1.3.0
 xmltodict==0.12.0
 yapf==0.31.0
