Update GitHub Actions to deploy the book

--- a/.github/workflows/build-book.yml
+++ b/.github/workflows/build-book.yml
@@ -4,7 +4,10 @@ name: deploy-book-here-try
 on:
   push:
     branches:
-    - main
+      - main
+  pull_request:
+    branches:
+      - main
 
 # This job installs dependencies, build the book, and pushes it to `gh-pages`
 jobs:
@@ -14,10 +17,10 @@ jobs:
     - uses: actions/checkout@v2
 
     # Install dependencies
-    - name: Set up Python 3.7
+    - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.8
 
     - name: Install dependencies
       run: |
@@ -26,13 +29,13 @@ jobs:
 
     # Build the book
     - name: Build the book
+      working-directory: docs
       run: |
-        git config --global init.defaultBranch main
-        jupyter-book build docs 
+        jupyter-book build .
 
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3.7.3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_build/html
+        publish_dir: ./docs/_build/html
